--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "amazone stripe backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon  index.js"
   },
   "author": "AKSHAY JADHAV",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
+  }
 }
