--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "AKSHAY JADHAV",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "stripe": "^8.95.0"
   }
 }
